--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "HerokuScheduleApp",
   "version": "1.0.0",
   "description": "",
+  "homepage": ".",
   "main": "ServerGetSQLData.js",
   "dependencies": {
     "cors": "^2.8.5",
