--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mysql": "^2.17.1"
   },
   "scripts": {
+    "start": "node ServerGetSQLData.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Fredrik Hjärpe",
