--- a/.env
+++ b/.env
@@ -1,8 +1,2 @@
-URL
-ActiveURl=https://hbgworks-poc-event-schedule.herokuapp.com/
-
-PORT
-ActivePort=5000
-
-API_TOKEN
-API_TOKEN=efs
+#Token
+API_TOKEN=efs 
