--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "npm": "^6.13.0",
+    "socket.io": "^2.3.0"
   },
   "author": "",
   "license": "ISC"
