Better structure in project

--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "license": "ISC",
   "scripts": {
     "server": "npx nodemon --exec babel-node ServerGetSQLData.js"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.8.7"
   }
 }
