--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "server": "npx nodemon --exec babel-node ServerGetSQLData.js"
+    "server": "npx nodemon --exec babel-node ServerGetSQLData.js --ignore RegedUser.json"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
